# morning-paper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/skills/morning-paper/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: architecture-decisions.md  contract-recovery.md  deployment.md  layout-contract.md  paperclip-engineer.md  product-spec.md  qa-contract.md  runtime-contract.md  smoke-test-2026-04-05.md  style-forensics-2026-04-12.md  visual-contract.md  visual-smoke-test-2026-04-05.md  visual-sourcing.md
examples/: config.example.yaml
scripts/: assemble_brief.py  brief_runtime.py  build_live_brief.py  bw_image.py  fetch_activity_log.py  fetch_maintenance_log.py  qa_linter.py  render_pdf.sh  run_full_reads.py  run_pass1.py  run_pass2.py  run_pass3.py  send_brief_digest.py  send_brief_digest_fixed.py  smoke_test.sh  validate_brief.py  visual_review.py
src/morning_paper/: article_print.py  builder.py  cli.py  config.py  extractors.py  image_tools.py  models.py  renderers.py  sources.py
src/morning_paper/resources/: typewriter.md
templates/: morning-paper-v1.md  typewriter-v5.md  typewriter.md
tests/: test_build.py  test_frontpage_visual_snapshot.py  test_visual_snapshot.py
tests/fixtures/sample-run-2026-04-05/: assembled-brief.json  assembled-brief.md  candidates.md  content-drafts.md  context-summary.md  rabbit-holes.md
tests/golden/2026-04-05/: source.md
