[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morning-paper"
version = "0.1.0"
description = "CLI for building a daily intelligence paper from configurable sources."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Devon Meadows" }
]
dependencies = [
  "feedparser>=6.0.11",
  "fpdf2>=2.8.2",
  "Pillow>=11.3.0",
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
]

[project.optional-dependencies]
pretty = ["weasyprint>=62.0"]

[project.scripts]
morning-paper = "morning_paper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
morning_paper = ["resources/*.md"]
